# dreg

./: .gitignore  Makefile  README.md  addDepends.make  configure.bat  configure.sh  globalVars.make  installDependencies.sh
configEditor/wasmDregApi/: compile.sh  dregApi.cpp  dregApi.h  updateObj.h
configEditor/wasmEngineApi/: compile.sh  drivingEngineApi.cpp  drivingEngineApi.h  updateObj.cpp  updateObj.h
configEditor/web/: dregStyle.css  editableGraph.html  index.html  style.css
configEditor/web/js/: AppLoadManager.js  ConfigUI.js  DregApi.js  Editor.js  MobileSplitter.js  Templates.js  drivingEngineAPI.js  main.js
configEditor/web/templates/: basicGraph.html  editableGraph.html  simGraph.html
engine/: Makefile  srcs.make  vars.make
engine/android/jni/: Android.mk  Application.mk
engine/include/: ConfigManager.h  ConfigParser.h  Graph.h  InputLogger.h  Util.h  Vector2.h  Vector3.h  Vehicle.h  VehicleApi.h  dreg.h  engine.h  logger.h
engine/src/: ConfigManager.cpp  ConfigParser.cpp  Graph.cpp  InputLogger.cpp  Util.cpp  Vector3.cpp  Vehicle.cpp  dreg.cpp  engine.cpp  logger.cpp
test/: Makefile
test/performance/: Makefile
test/performance/android/: .gitignore  settings.gradle
test/performance/android/app/src/main/cpp/: CMakeLists.txt  testApi.cpp
test/performance/include/: testPerformance.h
test/performance/src/: main.cpp  (+1 more)
test/src/: main.cpp
test/unit/: Makefile  cuTestCPP.lib  srcs.make
tools/: Makefile  addDependPath.c  rm.c
vehicleConfigs/: electricVehicle.txt  performanceTest.txt  unitTest.txt  unityDemo.txt  usabilityTest.txt
(+38 files in other folders)
